--- a/src/components/about-page-body/about-page-body.scss
+++ b/src/components/about-page-body/about-page-body.scss
@@ -4,3 +4,8 @@
     justify-content: center;
     align-items: center;
     height: 70vh;}
+
+@media (max-width: 640px) {
+    .about-page-body{
+        height: 60vh;}
+    }
