--- a/src/components/skills-page-body/skills-page-body.styles.scss
+++ b/src/components/skills-page-body/skills-page-body.styles.scss
@@ -19,6 +19,10 @@ div.projects-container{
         flex-direction: column;
     
     }
+
+    .skills-page-body{
+        height: 70vh;
+    }
   }
 
 .skill-icon {
